--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.1",
     "@prisma/client": "^5.0.0",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
@@ -16,10 +17,12 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^0.6.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
