--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.1",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.0.0",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
@@ -29,6 +31,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/shortid": "^0.0.29",
     "prisma": "^5.0.0"
   }
 }
